objects/oe_order_headers__c.object
<CustomObject>
    <fields>
        <fullName>ADDRESS_LINE_1__c</fullName>
        <label>Ship To Address Line1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADDRESS_LINE_2__c</fullName>
        <label>Ship To Address Line2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADDRESS_LINE_3__c</fullName>
        <label>Ship To Address Line3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADJUSTED_AMOUNT__c</fullName>
        <label>Adjusted Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMOUNT_OPEN__c</fullName>
        <label>Amount Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMOUNT__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_Due_Date__c</fullName>
        <description>Field is created for Oracle Integration : Checking the Due date for Cash Lease Records. (Beatriz Espinel)</description>
        <label>Action Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BALANCE__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BILL_ADDRESS_LINE_1__c</fullName>
        <label>Bill To Address Line1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BILL_ADDRESS_LINE_2__c</fullName>
        <label>Bill To Address Line2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BILL_ADDRESS_LINE_3__c</fullName>
        <label>Bill To Address Line3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BILL_CITY__c</fullName>
        <label>Bill To City</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BILL_COUNTRY__c</fullName>
        <label>Bill To Country</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BILL_POSTAL_CODE__c</fullName>
        <label>Bill To Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BILL_STATE__c</fullName>
        <label>Bill To State</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BILL_TO_SITE_ID__c</fullName>
        <label>Bill To Site ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <formula>IF(NOT(BILL_ADDRESS_LINE_1__c = Null) ,BILL_ADDRESS_LINE_1__c + &apos; &apos; + BILL_ADDRESS_LINE_2__c + &apos; &apos; + BILL_ADDRESS_LINE_3__c &amp; BR() &amp; BILL_CITY__c+&apos;, &apos; + BILL_STATE__c+&apos; &apos; + BILL_POSTAL_CODE__c&amp; BR() &amp; BILL_COUNTRY__c ,
BILL_ADDRESS_LINE_1__c + BILL_ADDRESS_LINE_2__c+ BILL_ADDRESS_LINE_3__c + BILL_CITY__c+BILL_COUNTRY__c+BILL_STATE__c + BILL_POSTAL_CODE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_County__c</fullName>
        <label>Bill To County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_contact__c</fullName>
        <label>Bill to contactID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Day_for_Workflow__c</fullName>
        <description>This formula field counts business days. This field is being used in a workflow rule.</description>
        <formula>5*FLOOR 
( (CASE(MOD(REQUESTED_DELIVERY_DATE__c -DATE(1900,1,7), 7), 1, REQUESTED_DELIVERY_DATE__c , 2, REQUESTED_DELIVERY_DATE__c , 3, REQUESTED_DELIVERY_DATE__c , 4, REQUESTED_DELIVERY_DATE__c , 5, REQUESTED_DELIVERY_DATE__c , 6, REQUESTED_DELIVERY_DATE__c -1, 0, REQUESTED_DELIVERY_DATE__c -2, REQUESTED_DELIVERY_DATE__c ) - 
CASE(MOD(Today()-DATE(1900,1,7),7), 1, Today(), 2, Today(), 3, Today(), 4, Today(), 5, Today(), 6, Today() - 1,0,Today() - 2,Today())) / 7) 
+ 
MOD( CASE(MOD(REQUESTED_DELIVERY_DATE__c -DATE(1900,1,7),7),1,REQUESTED_DELIVERY_DATE__c ,2,REQUESTED_DELIVERY_DATE__c , 3,REQUESTED_DELIVERY_DATE__c , 4,REQUESTED_DELIVERY_DATE__c , 5,REQUESTED_DELIVERY_DATE__c , 6,REQUESTED_DELIVERY_DATE__c -1, 0,REQUESTED_DELIVERY_DATE__c -2, REQUESTED_DELIVERY_DATE__c ) - 
CASE(MOD(Today()-DATE(1900,1,7),7), 1,Today(), 2,Today(), 3,Today(), 4,Today(), 5,Today(), 6,Today()-1, 0,Today()-2, Today()), 7) 
- 
IF( CASE(MOD(Today()-DATE(1900,1,7),7), 1,1, 2,2, 3,3, 4,4, 5,5, 6,5, 0,5,0) &lt;= CASE(MOD(REQUESTED_DELIVERY_DATE__c -DATE(1900,1,7),7), 1,1, 2,2, 3,3, 4,4, 5,5, 6,5, 0,5, 0), 0,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Day for Workflow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Days_Counter__c</fullName>
        <formula>5*FLOOR 
( (CASE(MOD(SSD__c-DATE(1900,1,7), 7), 1, SSD__c, 2, SSD__c, 3, SSD__c, 4, SSD__c, 5, SSD__c, 6, SSD__c-1, 0, SSD__c-2, SSD__c) - 
CASE(MOD(Today()-DATE(1900,1,7),7), 1, Today(), 2, Today(), 3, Today(), 4, Today(), 5, Today(), 6, Today() - 1,0,Today() - 2,Today())) / 7) 
+ 
MOD( CASE(MOD(SSD__c-DATE(1900,1,7),7),1,SSD__c,2,SSD__c, 3,SSD__c, 4,SSD__c, 5,SSD__c, 6,SSD__c-1, 0,SSD__c-2, SSD__c) - 
CASE(MOD(Today()-DATE(1900,1,7),7), 1,Today(), 2,Today(), 3,Today(), 4,Today(), 5,Today(), 6,Today()-1, 0,Today()-2, Today()), 7) 
- 
IF( CASE(MOD(Today()-DATE(1900,1,7),7), 1,1, 2,2, 3,3, 4,4, 5,5, 6,5, 0,5,0) &lt;= CASE(MOD(SSD__c-DATE(1900,1,7),7), 1,1, 2,2, 3,3, 4,4, 5,5, 6,5, 0,5, 0), 0,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONTACT_EMAIL__c</fullName>
        <label>Contact E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CONTACT_FAX__c</fullName>
        <label>Contact Fax</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACT_PERSON_NAME__c</fullName>
        <label>Contact Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACT_PHONE1__c</fullName>
        <label>Phone1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CONTACT_PHONE2__c</fullName>
        <label>Phone2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>COUNTRY__c</fullName>
        <label>Ship To Country</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD__c</fullName>
        <label>CPD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRD_Change_Requested__c</fullName>
        <formula>IF(OR(OR(ORDER_STATUS__c == &apos;CANCELLED&apos;,ORDER_STATUS__c == &apos;Cancelled&apos;),OR(ORDER_STATUS__c == &apos;CLOSED&apos;,ORDER_STATUS__c == &apos;Closed&apos;)),&quot;Orders with Cancelled/Closed Status can not request for CRD Change.&quot;, HYPERLINK(&quot;/apex/crdchangerequest?oId=&quot; &amp; Id, image(&quot;resource/ChangeCRD&quot;, &quot;Click&quot;), &apos;_self&apos;))</formula>
        <label>Request CRD Change</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRD_Match__c</fullName>
        <formula>IF(  ISNULL(CRD_SFDC__c) || REQUESTED_DELIVERY_DATE__c ==  CRD_SFDC__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRD Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRD_SFDC__c</fullName>
        <label>CRD SFDC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CREATED_BY__c</fullName>
        <label>Created By</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CREATION_DATE__c</fullName>
        <label>Order Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CREDIT_LIMIT__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_NAME__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUST_ACCT_NUMBER__c</fullName>
        <label>Customer Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_CRD_Button_List_View__c</fullName>
        <formula>IF(OR(OR(ORDER_STATUS__c == &apos;CANCELLED&apos;,ORDER_STATUS__c == &apos;Cancelled&apos;),OR(ORDER_STATUS__c == &apos;CLOSED&apos;,ORDER_STATUS__c == &apos;Closed&apos;)),&quot;Orders with Cancelled/Closed Status can not request for CRD Change.&quot;, HYPERLINK(&quot;/apex/crdchangerequest?oId=&quot; &amp;Id&amp;&quot;&amp;returnPage=Order_Details&quot;,&apos;Change CRD&apos;, &apos;_self&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change CRD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_ShipTo_Address__c</fullName>
        <formula>IF(OR(OR(ORDER_STATUS__c == &apos;CANCELLED&apos;,ORDER_STATUS__c == &apos;Cacncelled&apos;),OR(ORDER_STATUS__c == &apos;CLOSED&apos;,ORDER_STATUS__c == &apos;Closed&apos;)),&quot;Orders with Cancelled/Closed Status can not request for Shipping Address Change.&quot;, IF( (Business_Days_Counter__c &lt;= 3),&quot;May not be changed within 3 business days of SSD&quot;, HYPERLINK(&quot;/apex/ShipToAddressSelect?Id=&quot; &amp; Id, image(&quot;resource/ShippingAddressChange&quot;, &quot;Click&quot;), &apos;_self&apos;)))</formula>
        <label>Change ShipTo Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Terms__c</fullName>
        <label>Credit Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Requested_Date__c</fullName>
        <label>Current Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Date_Portal__c</fullName>
        <description>CASE#: 00615159 Request Customer Delivery Date Roll up - BEatriz needs to show the latest date based on teh order line updates not the original date when order was created.</description>
        <label>Customer Request Date</label>
        <summarizedField>oe_order_lines__c.REQUESTED_DELIVERY_DATE__c</summarizedField>
        <summaryFilterItems>
            <field>oe_order_lines__c.LINE_STATUS__c</field>
            <operation>notEqual</operation>
            <value>CANCELLED, CLOSED</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>LEASE INTERCONNECT</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>LEASE ORIGINATION</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>LEASE INSTALLATION</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>PERFORMANCE GUARANTEE</value>
        </summaryFilterItems>
        <summaryForeignKey>oe_order_lines__c.Order_SFDC_ID__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DUE_DATE__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <description>Rollup summary of OrderLine (Date Delivered)</description>
        <label>Date Delivered</label>
        <summarizedField>oe_order_lines__c.DATE_DELIVERED__c</summarizedField>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>LEASE INTERCONNECT</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>LEASE ORIGINATION</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>LEASE INSTALLATION</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>PERFORMANCE GUARANTEE</value>
        </summaryFilterItems>
        <summaryForeignKey>oe_order_lines__c.Order_SFDC_ID__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EMAIL_ID__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FDS__c</fullName>
        <formula>HYPERLINK(&quot;https://www.sunpowersupport.com/Stringsizer/flashDataReport?salesOrder=&quot;&amp;ORDER_NUMBER__c &amp;&quot;&amp;sessionid=&quot; &amp;$Api.Session_ID&amp;&quot;&amp;serverurl=&quot; &amp;$Api.Enterprise_Server_URL_150, &quot;Get Flash Data Report&quot;,&quot;_blank&quot;)</formula>
        <label>FDS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINANCIER__c</fullName>
        <label>Financier</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flash_Data_Report__c</fullName>
        <description>Link to view the Flash data report</description>
        <formula>HYPERLINK(&quot;https://www.sunpowersupport.com/Stringsizer/flashDataReport?salesOrder=&quot;&amp;Name,$Label.View_Flash_Report)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>View the Flash Data report</inlineHelpText>
        <label>Flash Data Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HEADER_ID__c</fullName>
        <externalId>true</externalId>
        <label>Header ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hold_Status__c</fullName>
        <description>Requested by O2C, Casey Hui as way to report and be able to place orders on hold.</description>
        <label>Hold Status</label>
        <picklist>
            <picklistValues>
                <fullName>AMENDMENT HOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREDIT HOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPLIANCE HOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PENDING OK TO SHIP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>INVOICE_REFERENCE__c</fullName>
        <label>Invoice Reference</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATED_BY__c</fullName>
        <label>Last Updated By</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATE_DATE__c</fullName>
        <label>Last Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEASE_FLAG__c</fullName>
        <label>Lease Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEASE_NUMBER__c</fullName>
        <label>PO#</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEASE_VALUE__c</fullName>
        <label>Lease Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOCATION_NUMBER__c</fullName>
        <label>Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIN_SCHEDULE_ARRIVAL_DATE__c</fullName>
        <description>ok to ship project- Minimum Schedule Arrival Date-</description>
        <label>Min Schedule Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MIN_SCHEDULE_SHIP_DATE__c</fullName>
        <description>Minimum Schedule Ship Date</description>
        <label>Min Schedule Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Requested_delivery_Date__c</fullName>
        <formula>REQUESTED_DELIVERY_DATE__c</formula>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OK_TO_SHIP__c</fullName>
        <description>Holds values for Ok To Ship to send to Oracle</description>
        <label>OK To Ship</label>
        <picklist>
            <picklistValues>
                <fullName>SKIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RELEASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNSCHEDULE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OK_To_Ship_Action_Due_Date__c</fullName>
        <description>OK To Ship Action Due Date</description>
        <label>OK To Ship Action Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OK_To_Ship_Button__c</fullName>
        <description>Formula field that acts as a button and takes to the order_ok_to_ship page when clicked</description>
        <formula>IF(AND(NOT(ISPICKVAL(Parent_Account__r.Country_Domain__c, &apos;rvar-us&apos;)),AND(NOT(ISPICKVAL(Parent_Account__r.Country_Domain__c, &apos;combo-us&apos;)),NOT(CONTAINS( ORDER_TYPE__c,&apos;RVAR&apos;)))),&quot;Only RVAR orders are eligible for the online OK To Ship functionality&quot;, IF( 
Parent_Account__r.Partner_Opt_Out_Ok_To_Ship__c = TRUE, 
&quot;Partner Opted Out of Ok To Ship&quot;, 

IF( 
OR(OR(ORDER_STATUS__c == &apos;CANCELLED&apos;,ORDER_STATUS__c == &apos;Cancelled&apos;),OR(ORDER_STATUS__c == &apos;CLOSED&apos;,ORDER_STATUS__c == &apos;Closed&apos;)), 
&quot;Orders with Cancelled/Closed Status can not request for CRD Change.&quot;, 

IF( AND(ISPICKVAL(OK_TO_SHIP__c,&apos;UNSCHEDULE&apos;),ISNULL( OK_To_Ship_Action_Due_Date__c), ISNULL(MIN_SCHEDULE_ARRIVAL_DATE__c), ISNULL(MIN_SCHEDULE_SHIP_DATE__c)), 
&quot;UNSCHEDULED-Didn&apos;t Confirm Order On Time&quot;, 
IF(ISPICKVAL(OK_TO_SHIP__c,&apos;UNSCHEDULE&apos;),&quot;Order UNSCHEDULE Requested&quot;, 
IF( AND(INCLUDES(Hold_Status__c,&apos;PENDING OK TO SHIP&apos;), NOT(ISPICKVAL(OK_TO_SHIP__c,&apos;RELEASE&apos;)),NOT(ISPICKVAL(OK_TO_SHIP__c,&apos;UNSCHEDULE&apos;))), 
HYPERLINK(&quot;/apex/order_ok_to_ship?Id=&quot; &amp; Id, image(&quot;resource/OkToShipButton&quot;, &quot;Click&quot;), &apos;_self&apos;), &quot;Ok To Ship Confirmed&quot;)) 

) 
) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OK To Ship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OK_To_Ship_Status__c</fullName>
        <formula>IF(AND(NOT(ISPICKVAL(Parent_Account__r.Country_Domain__c, &apos;rvar-us&apos;)),AND(NOT(ISPICKVAL(Parent_Account__r.Country_Domain__c, &apos;combo-us&apos;)),NOT(CONTAINS( ORDER_TYPE__c,&apos;RVAR&apos;)))),&quot;Only RVAR orders are eligible for the online OK To Ship functionality&quot;, 
IF( Parent_Account__r.Partner_Opt_Out_Ok_To_Ship__c = TRUE, 
&quot;Partner Opted Out of Ok To Ship&quot;, 
IF( AND(ISPICKVAL(OK_TO_SHIP__c,&apos;UNSCHEDULE&apos;), ISNULL( OK_To_Ship_Action_Due_Date__c), ISNULL(MIN_SCHEDULE_ARRIVAL_DATE__c), ISNULL(MIN_SCHEDULE_SHIP_DATE__c)), 
&quot;UNSCHEDULED-Didn&apos;t Confirm Order On Time&quot;, 
IF(ISPICKVAL(OK_TO_SHIP__c,&apos;UNSCHEDULE&apos;),&quot;UNSCHEDULE Requested - Didn&apos;t Confirm Order On Time&quot;, 
IF(Parent_Account__r.Partner_Opt_Out_Ok_To_Ship__c = TRUE, 
&quot;Partner Opted Out of Ok To Ship&quot;, 
IF( OR(ISPICKVAL(OK_TO_SHIP__c,&apos;RELEASE&apos;), 
NOT(INCLUDES(Hold_Status__c,&apos;PENDING OK TO SHIP&apos;))), 
&quot;Ok To Ship Confirmed&quot;, 
&quot;Pending Ok To Ship Confirmation&quot;) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OK To Ship Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPERATING_UNIT__c</fullName>
        <label>Operating Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORACLE_REQUEST_ID__c</fullName>
        <label>Oracle Request ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORACLE_USER_ID__c</fullName>
        <label>Oracle User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORDER_NUMBER__c</fullName>
        <label>SO#</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_STATUS__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_TYPE__c</fullName>
        <label>Oracle Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORG_ID__c</fullName>
        <label>Org ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oracle_Account_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PACKING_INSTRUCTIONS__c</fullName>
        <label>Packing Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PARTNER_ACC_NUMBER__c</fullName>
        <label>Partner Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARTNER_NAME__c</fullName>
        <label>Opportunity Name CVAR</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAYMENT_SCHEDULE_ID__c</fullName>
        <label>Payment Schedule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POSTAL_CODE__c</fullName>
        <label>Ship To Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_SUBMIT_DATE__c</fullName>
        <label>PO Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROCESS_FLAG__c</fullName>
        <label>Process Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROCESS_MESSAGE__c</fullName>
        <label>Process Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSR_Name__c</fullName>
        <formula>Parent_Account__r.Primary_PSR__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSRemailId__c</fullName>
        <inlineHelpText>This is the email ID to be updated through workflow Field Update&apos; PSRemail (Formula Field)</inlineHelpText>
        <label>PSRemailId</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Account)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Name_Formula__c</fullName>
        <formula>Parent_Account__r.Name</formula>
        <label>Partner Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAD_CUSTOMER_NUMBER__c</fullName>
        <label>QAD Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REFERENCE__c</fullName>
        <label>Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REGION__c</fullName>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUESTED_DELIVERY_DATE__c</fullName>
        <description>Case # - BEatriz wants the maximum crd date from the roll up field to be displayed on the portal UI. We created a new roll up field. This filed is populated via Oracle SOA integration</description>
        <label>Customer Request Date Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAD__c</fullName>
        <label>Scheduled Arrival Date</label>
        <summarizedField>oe_order_lines__c.SCHEDULED_ARRIVAL_DATE__c</summarizedField>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>LEASE INTERCONNECT</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>LEASE ORIGINATION</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>LEASE INSTALLATION</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>PERFORMANCE GUARANTEE</value>
        </summaryFilterItems>
        <summaryForeignKey>oe_order_lines__c.Order_SFDC_ID__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFDC_REQUEST_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Request ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SFDC_REQUEST_STATUS__c</fullName>
        <label>SFDC Request Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Request_ID_New__c</fullName>
        <label>SFDC Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SHIPPING_INSTRUCTIONS__c</fullName>
        <label>Shipping Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SHIP_FROM_ORG_ID__c</fullName>
        <label>Ship From ORG ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SHIP_TO_CONTACT_ID__c</fullName>
        <label>Ship To Contact ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SHIP_TO_SITE_ID__c</fullName>
        <label>Ship To Site ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_STATUS__c</fullName>
        <label>Site Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMARTPACK_FLAG__c</fullName>
        <label>Smart Pack Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA_ERRORMSG__c</fullName>
        <label>Soa Error Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOA_FLAG__c</fullName>
        <label>Soa Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIAL_INSTRUCTIONS__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSD__c</fullName>
        <label>SSD</label>
        <summarizedField>oe_order_lines__c.LINE_SCH_SHIP_DATE__c</summarizedField>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>LEASE INTERCONNECT</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>LEASE ORIGINATION</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>LEASE INSTALLATION</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>oe_order_lines__c.ITEM_DESCRIPTION__c</field>
            <operation>notContain</operation>
            <value>PERFORMANCE GUARANTEE</value>
        </summaryFilterItems>
        <summaryForeignKey>oe_order_lines__c.Order_SFDC_ID__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <label>Ship To State</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_County__c</fullName>
        <label>Ship To County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address__c</fullName>
        <formula>IF(NOT(ADDRESS_LINE_1__c   = Null) ,ADDRESS_LINE_1__c  + &apos; &apos; + ADDRESS_LINE_2__c  + &apos; &apos; + ADDRESS_LINE_3__c  &amp; BR()  &amp; Ship_To_City__c +&apos;,&apos;+ STATE__c +&apos; &apos; + POSTAL_CODE__c &amp; BR()  &amp;COUNTRY__c,
ADDRESS_LINE_1__c  + ADDRESS_LINE_2__c+ ADDRESS_LINE_3__c +  Ship_To_City__c+COUNTRY__c+STATE__c + POSTAL_CODE__c)</formula>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Current_Value__c</fullName>
        <formula>Ship_to_Address__c</formula>
        <label>Shipping Address Current Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Previous_Value__c</fullName>
        <label>Shipping Address Previous Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sistem_Size_Rollup__c</fullName>
        <label>System Size</label>
        <summarizedField>oe_order_lines__c.System_Size__c</summarizedField>
        <summaryForeignKey>oe_order_lines__c.Order_SFDC_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sistem_Size__c</fullName>
        <label>System Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <label>System Size</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Size_division__c</fullName>
        <formula>IF( Sistem_Size_Rollup__c !=0,  Sistem_Size_Rollup__c  / 1000, 0)</formula>
        <label>System Size (kw)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRANSACTION_DATE__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TRASACTION_TYPE__c</fullName>
        <label>Transaction Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VENDOR_SITE_CODE__c</fullName>
        <label>Vendor Site Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4_days_before_SSD__c</fullName>
        <description>4 days before SSD</description>
        <label>4 days before SSD</label>
        <type>Date</type>
    </fields>
</CustomObject>